# KaggleCompany

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alignment.md  deepdive.md  docker-compose.yml  pyproject.toml
constitutions/: consolidation.md  heartbeat.md  research-subagent.md  research-worker.md  vp.md
dashboard/: Dockerfile  app.js  build.py  control.css  control.html  control.js  index.html  serve.py  style.css
skills/: deep-dive.md  first-skillmd.md
src/: config.py  main.py
src/budget/: gpu_provisioner.py  limits.py  security.py  tracker.py
src/comms/: inter_agent.py  slack_bot.py
src/consolidation/: consolidator.py
src/memory/: library.py  state_store.py  strategy.py  transcripts.py
src/orchestrator/: events.py  health.py  manager.py  scheduler.py
src/runtime/: agent.py  context_loader.py  heartbeat.py  prompt_cache.py  reflection.py  tool_executor.py
src/tools/: __init__.py  agent_mgmt_tools.py  communication_tools.py  execution_tools.py  gpu_tools.py  kaggle_tools.py  research_tools.py  skill_tools.py
src/workflows/: __init__.py  handlers.py
strategies/: first-strategy.md
tests/: conftest.py  test_budget.py  test_comms.py  test_memory.py  test_runtime.py
