[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kaggle-company"
version = "0.1.0"
description = "Autonomous multi-agent system for Kaggle competitions"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40",
    "slack-bolt>=1.20",
    "aiohttp>=3.9",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "kaggle>=1.6",
    "beautifulsoup4>=4.12",
    "parallel-web>=0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
kaggle-company = "src.main:cli"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
